force-app/main/default/objects/Calendar_Date_Range__mdt/Calendar_Date_Range__mdt.object-meta.xml
<CustomObject>
    <label>Calendar Date Range</label>
    <pluralLabel>Calendar Date Ranges</pluralLabel>
</CustomObject>