force-app/main/default/objects/Calendar_Date_Range__mdt/fields/Range_Color__c.field-meta.xml
<CustomField>
    <fullName>Range_Color__c</fullName>
    <label>Range Color</label>
    <length>20</length>
    <type>Text</type>
</CustomField>