force-app/main/default/objects/Calendar_Date_Range__mdt/fields/Range_Name__c.field-meta.xml
<CustomField>
    <fullName>Range_Name__c</fullName>
    <label>Range Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>