force-app/main/default/objects/Calendar_Date_Range__mdt/fields/Sequence_Number__c.field-meta.xml
<CustomField>
    <fullName>Sequence_Number__c</fullName>
    <label>Sequence Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>